fix: address review findings on isResultSet, ROOT_PATH guard and constants
Alpha 3 review follow-ups from the PR bots and a second review pass.

- Persist the Alpha 2 coreProfile setting into coreVersion on load;
  explicit Auto in the new key wins over a legacy value.
- isResultSet batch quick-fix reuses the inspection's guard analysis at
  the fetch offset instead of a substring window. A reassignment of the
  result variable completes at ";", ",", an unmatched closer, or a
  depth-0 or/and/xor; ?:, ??, || and && keep the fetch inside the
  assignment. Reassignment inside a positive if is unguarded.
- ROOT_PATH guard: short "<?" open tags are handled by the policy so the
  quick-fix never inserts before namespace; multiple declare statements
  and brace namespaces are skipped; includes that start with HTML are
  still inspected but the quick-fix declines without a leading tag;
  404/403 stub detection splits statements outside quotes.
- Language constants: index keeps the original spelling and resolution
  is exact-case; only a $smarty.const. prefix is stripped; a Smarty
  reference provider is registered for leaf elements.
- RegisterTemplateQuickFix uses Locale.ROOT for its duplicate check.
- Inspection descriptions get lang and title; changelog says JUnit 4.
- Tests for each rule above; 46 tests pass.